ingress/dev/admin-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress-dev
  namespace: petclinic-dev
  labels:
    name: admin-ingress-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: admin.petclinic-dev.csc11007.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: admin-server
                port:
                  number: 9090
