ingress/dev/ingress-dev_values.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress-dev
  namespace: petclinic-dev
  labels:
    name: petclinic-ingress-dev
  annotations:
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://petclinic-dev.csc11007.com"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: petclinic-dev.csc11007.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
